--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -87,17 +87,14 @@
                     <tbody>
                         <tr>
                             <td id="mision">
-                                <img src="../assets/img/QS/moderna-creacion-adan.png" alt="Mano artificial y mano humana">
+                                <img src="assets/img/QS/moderna-creacion-adan.png" alt="Mano artificial y mano humana">
                                 <h3 class="mision">Misión:</h3>
                                 <p>Nuestra misión en <strong>CLAN-F</strong> es impulsar la innovación y la transformación digital a través de soluciones de inteligencia artificial de vanguardia. Trabajamos incansablemente para brindar tecnologías avanzadas que mejoren la eficiencia, la toma de decisiones y la calidad de vida de los hogares en Argentina. Nos esforzamos por ser líderes en el desarrollo de soluciones AI, éticas y responsables que beneficien a la sociedad.</p>
                             </td>
                             <td id="vision">
-                                <img src="../assets/img/QS/robot-humano.png" alt="Manos Robóticas">
+                                <img src="assets/img/QS/robot-humano.png" alt="Manos Robóticas">
                                 <h3 class="vision">Visión:</h3>
                                 <p >Nuestra visión en <strong>CLAN-F</strong> es ser la empresa lider en el campo de la AI, reconocida por nuestro compromiso con la excelencia, la ética y la sostenibilidad. Nos esforzamos por crear un futuro en el que la IA potencie la creatividad humana, resuelva los desafíos más complejos y promueva un mundo más equitativo. Trabajamos para construir un ecosistema AI colaborativo y diverso que inspire la innovación y el progreso continuo.</p>
-                            </td>
-                            <td>
-
                             </td>
                         </tr>
                     </tbody>
