--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -111,6 +111,7 @@
                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                     </ul>
+                    <p class="ocupacion">FullStack Developer Jr.</p>
                     <p class="slogan">Esta vez sí compila</p>
                     <p class="hobbies">Hobbie: Mi pasión es aprender y mi vocación es enseñar; Amo el desarrollo Front-End, hacer y buscar diseños UX/UI; Prácticas de diseño y accesibilidad para Web; Desafíos de código al estilo HavkerRank o 30 días de X lenguaje.</p>
                     <p class="soft-skills">Habilidades Blandas: Autodidacta,Trabajo en Equipo, Creatividad, Capacidad Analítica, Facilidad de Aprendizaje.</p>
@@ -123,6 +124,7 @@
                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                     </ul>
+                    <p class="ocupacion">FullStack Developer Jr.</p>
                     <p class="slogan">Slogan Persona 1</p>
                     <p class="hobbies">Hobbie: Hobbie 1</p>
                     <p class="soft-skills">Habilidades Blandas: Habilidad 1, Habilidad 2</p>
@@ -135,6 +137,7 @@
                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                     </ul>
+                    <p class="ocupacion">FullStack Developer Jr.</p>
                     <p class="slogan">Carpe Diem - Kadyma</p>
                     <p class="hobbies">Hobbie: Amo el Fútbol; Disfruto viajar y pasar tiempo con mi Familia y Amigos; Me encanta aprender continuamente.</p>
                     <p class="soft-skills">Habilidades Blandas: Leal, Amigable, Comunicativo, Analítico.</p>
@@ -147,6 +150,7 @@
                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                     </ul>
+                    <p class="ocupacion">FullStack Developer Jr.</p>
                     <p class="slogan">Slogan Persona 1</p>
                     <p class="hobbies">Hobbie: Hobbie 1</p>
                     <p class="soft-skills">Habilidades Blandas: Habilidad 1, Habilidad 2</p>
@@ -160,8 +164,8 @@
                         <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                     </ul>
                     <p class="ocupacion">Martillero Público, Wine Maker, FullStack Developer Jr.</p>
-                    <p class="slogan">Al servicio del crecimiento y desarrollo</p>
-                    <p class="hobbies">Hobbie: Tennis</p>
+                    <p class="slogan">"Al servicio del crecimiento y desarrollo".</p>
+                    <p class="hobbies">Hobbie: Tennis.</p>
                     <p class="soft-skills">Habilidades Blandas: Servicio, Responsabilidad, Puntualidad.</p>
                 </div>
             </div>
