Algunos detalles de las tarjetas

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -112,7 +112,7 @@
                         <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                     </ul>
                     <p class="ocupacion">FullStack Developer Jr.</p>
-                    <p class="slogan">Esta vez sí compila</p>
+                    <p class="slogan">"Esta vez sí compila"</p>
                     <p class="hobbies">Hobbie: Mi pasión es aprender y mi vocación es enseñar; Amo el desarrollo Front-End, hacer y buscar diseños UX/UI; Prácticas de diseño y accesibilidad para Web; Desafíos de código al estilo HavkerRank o 30 días de X lenguaje.</p>
                     <p class="soft-skills">Habilidades Blandas: Autodidacta,Trabajo en Equipo, Creatividad, Capacidad Analítica, Facilidad de Aprendizaje.</p>
                 </div>
@@ -125,7 +125,7 @@
                         <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                     </ul>
                     <p class="ocupacion">FullStack Developer Jr.</p>
-                    <p class="slogan">Slogan Persona 1</p>
+                    <p class="slogan">"Slogan Luimer"</p>
                     <p class="hobbies">Hobbie: Hobbie 1</p>
                     <p class="soft-skills">Habilidades Blandas: Habilidad 1, Habilidad 2</p>
                 </div>
@@ -138,7 +138,7 @@
                         <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                     </ul>
                     <p class="ocupacion">FullStack Developer Jr.</p>
-                    <p class="slogan">Carpe Diem - Kadyma</p>
+                    <p class="slogan">"Carpe Diem - Kadyma"</p>
                     <p class="hobbies">Hobbie: Amo el Fútbol; Disfruto viajar y pasar tiempo con mi Familia y Amigos; Me encanta aprender continuamente.</p>
                     <p class="soft-skills">Habilidades Blandas: Leal, Amigable, Comunicativo, Analítico.</p>
                 </div>
@@ -151,7 +151,7 @@
                         <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
                     </ul>
                     <p class="ocupacion">FullStack Developer Jr.</p>
-                    <p class="slogan">Slogan Persona 1</p>
+                    <p class="slogan">"Slogan Nacho"</p>
                     <p class="hobbies">Hobbie: Hobbie 1</p>
                     <p class="soft-skills">Habilidades Blandas: Habilidad 1, Habilidad 2</p>
                 </div>
