--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@
                 <iframe width="100%" height="450" src="https://www.youtube.com/embed/Cx5aNwnZYDc?si=LJIgPst6iwEte0Dt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
+        <!-- Sexta sección Reseñas (con API)-->
+        <section class="reviews">
+            <div id="review-card-container"></div>
+        </section>
     </main>
 
     <footer class="footer">
