Cambia innerHTML > appendChild en API

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </div>
         </section>
         <!-- Quinta sección Beneficios de incorporar IA en la vida cotidiana -->
-        <!-- <section class="benefits">
+        <section class="benefits">
             <div class="benefits-content">
                     <h3 class="benefits__title">¿Por qué deberías incorporar IA en tu vida cotidiana?</h3>
                     <div class="benefit-item">
@@ -207,17 +207,16 @@
             <div class="benefits-video">
                 <iframe width="100%" height="450" src="https://www.youtube.com/embed/Cx5aNwnZYDc?si=LJIgPst6iwEte0Dt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-        </section> -->
+        </section>
         <!-- Sexta sección Reseñas (con API)-->
-        <section class="reviews">
-            <!-- Review estática: -->
+        <section id="reviews">
+            <!-- Review estática (para ver comparación con API): -->
             <div class="review-card">
                 <img src="https://images.pexels.com/photos/1181686/pexels-photo-1181686.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Foto de reviewer" class="review-card__img">
                 <p class="review-card__description">"Excelente atención y productos de calidad. Muy recomendable."</p>
                 <p class="review-card__name">Mariana Pérez</p>
             </div>
-             <!-- Review dinámica (API): desde JS -->
-            <div id="review-card-container"></div>
+            <!-- Review dinámica (API): insertada desde JS -->
         </section>
     </main>
 
