--- a/lista_productos.html
+++ b/lista_productos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLAN-F</title> <!-- Modifica el título si lo necesitas, pero deja CLAN-F al inicio -->
+    <title>CLAN-F | PRODUCTOS</title> <!-- Modifica el título si lo necesitas, pero deja CLAN-F al inicio -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles/style.css">
@@ -88,12 +88,84 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
+                    <img src="assets/img/productos/casco.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Casco inteligente para ciclistas UNIT 1 Faro</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 114.599</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>
+            <div class="product-card">
+                <div class="product-card__img-container">
+                    <img src="assets/img/productos/asistente_amazon_alexa.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Asistente de Voz Amazon Echo Dot 5th Gen con ALEXA</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 79.999</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>            
+            <div class="product-card">
+                <div class="product-card__img-container">
+                    <img src="assets/img/productos/asistente_google-home.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Asistente de Voz Altavoz Google Home</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 79.999</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>     
+            <div class="product-card">
+                <div class="product-card__img-container">
                     <img src="assets/img/productos/olla-electrica.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
                     <h3 class="product-card__title">Olla Electrica 6l A Presion Tipo Arrocera</h3>
                     <div class="product-card__purchase">
                         <p class="product-card__price">$ 79.999</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>
+            <div class="product-card">
+                <div class="product-card__img-container">
+                    <img src="assets/img/productos/cepillo-dientes.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Cepillo de dientes Oral-B Genius X</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 70.599</p>
                         <button class="product-card__cart-button"></button>
                     </div>
                 </div>
@@ -196,6 +268,42 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
+                    <img src="assets/img/productos/cerradura.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Cerradura inteligente Nuki Smart Lock 3.0 Pro</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 104.450</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>
+            <div class="product-card">
+                <div class="product-card__img-container">
+                    <img src="assets/img/productos/termostato.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Nest Learning Termostato</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 92.304</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>
+            <div class="product-card">
+                <div class="product-card__img-container">
                     <img src="assets/img/productos/reloj.webp" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
@@ -220,6 +328,24 @@
                     <h3 class="product-card__title">Smartwatch Reloj Inteligente Redondo</h3>
                     <div class="product-card__purchase">
                         <p class="product-card__price">$ 27.050</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>
+            <div class="product-card">
+                <div class="product-card__img-container">
+                    <img src="assets/img/productos/altavoz-google.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Altavoz Nest Mini con Google Assistant</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 21.799</p>
                         <button class="product-card__cart-button"></button>
                     </div>
                 </div>
