Reemplaza imágenes comprimidas p. web

--- a/lista_productos.html
+++ b/lista_productos.html
@@ -106,7 +106,7 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/productos/asistente_amazon_alexa.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/asistente_amazon.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
                     <h3 class="product-card__title">Asistente de Voz Amazon Echo Dot 5th Gen con ALEXA</h3>
@@ -124,7 +124,7 @@
             </div>            
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/productos/asistente_google-home.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/asistente_google.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
                     <h3 class="product-card__title">Asistente de Voz Altavoz Google Home</h3>
@@ -178,7 +178,7 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/productos/balanza_ia.webp" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/balanza_ia.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
                     <h3 class="product-card__title">Balanza Inteligente Cocina Calorias, Carbohidratos, Proteina</h3>
@@ -214,7 +214,7 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/productos/aspiradora.webp" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/aspiradora.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
                     <h3 class="product-card__title">Aspiradora Robot Inteligente Femmto Trapeadora Limpia Pisos</h3>
@@ -250,10 +250,10 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/productos/camara.webp" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/camara-ezviz.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
-                    <h3 class="product-card__title">Nueva cámara inteligente de Ezviz</h3>
+                    <h3 class="product-card__title">Cámara de seguridad C3X Ezviz con visión nocturna</h3>
                     <div class="product-card__purchase">
                         <p class="product-card__price">$ 248.500</p>
                         <button class="product-card__cart-button"></button>
@@ -304,7 +304,7 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/productos/reloj.webp" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/reloj.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
                     <h3 class="product-card__title">Reloj Inteligente Hk8 Pro Max Ultra Con Pantalla</h3>
@@ -358,7 +358,7 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/productos/lavarropa.webp" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/lavarropa.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
                     <h3 class="product-card__title">Lavarropas Samsung 10kg Con Inteligencia Artificial Inverter</h3>
