Sincroniza todos los HTML

--- a/lista_productos.html
+++ b/lista_productos.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLAN-F | PRODUCTOS</title> <!-- Modifica el título si lo necesitas, pero deja CLAN-F al inicio -->
+    <title>PRODUCTOS (Clan-F)</title> <!-- Modifica el título si lo necesitas, pero deja CLAN-F al inicio -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/lista_productos.css"> <!-- HOJA DE ESTILOS ESPECIFICA-->
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Pacifico&family=Playfair+Display:wght@400;500;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Playfair+Display:wght@400;500;700;800;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="assets/fav.ico" type="image/x-icon">
     
     <!-- Etiquetas meta para SEO y social media -->
