--- a/contacto.html
+++ b/contacto.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLAN-F</title>
+    <title>CONTÁCTANOS (Clan-F)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/contacto.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Pacifico&family=Playfair+Display:wght@400;500;700;800;900&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Playfair+Display:wght@400;500;700;800;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="assets/fav.ico" type="image/x-icon">
+    
      <!-- Etiquetas meta para SEO y social media -->
     <meta name="title" content="CLAN-F | Tienda electrónica de productos con IA" />
     <meta name="description"
@@ -38,10 +39,8 @@
             <div id="toggle-menu" class="toggle-menu">
                 <label for="toggle-menu-checkbox">
                     <button id="abrir" class="abrir-menu">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="32"
-                            height="32" viewBox="0 0 24 24" stroke-width="2.5" stroke="#393E46" fill="none"
-                            stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="32" height="32" viewBox="0 0 24 24" stroke-width="2.5" stroke="#393E46" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <path d="M4 6l16 0" />
                             <path d="M4 12l16 0" />
                             <path d="M4 18l16 0" />
