--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -6,9 +6,11 @@
     <title>SOMOS CLAN-F</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Enlace CSS: fontawesome -->
+    <script src="https://kit.fontawesome.com/534658d6ab.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/quienes_somos.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Pacifico&family=Playfair+Display:wght@400;500;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Playfair+Display:wght@400;500;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="shortcut icon" href="assets/fav.ico" type="image/x-icon">
     
@@ -21,8 +23,7 @@
     <meta property="og:url" content="https://paylemanc.github.io/CLAN-F--e-commerce/" />
     <meta property="og:title" content="CLAN-F | Tienda electrónica de productos con IA" />
     <meta property="og:description" content="Bienvenido a CLAN-F, tu tienda electrónica de productos personales y de hogar potenciados con Inteligencia Artificial. Descubre la innovación y comodidad que la IA puede ofrecerte en tus actividades diarias." />
-    <!-- Enlace CSS: fontawesome -->
-    <script src="https://kit.fontawesome.com/534658d6ab.js" crossorigin="anonymous"></script>
+    <meta property="og:image" content="" />
 </head>
 <body>
     <header>
