Deja listo etiquetas meta social media

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -23,7 +23,7 @@
     <meta property="og:url" content="https://paylemanc.github.io/CLAN-F--e-commerce/" />
     <meta property="og:title" content="CLAN-F | Tienda electrónica de productos con IA" />
     <meta property="og:description" content="Bienvenido a CLAN-F, tu tienda electrónica de productos personales y de hogar potenciados con Inteligencia Artificial. Descubre la innovación y comodidad que la IA puede ofrecerte en tus actividades diarias." />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="https://github.com/PaylemanC/CLAN-F--e-commerce/blob/main/assets/img/portada.png" />
 </head>
 <body>
     <header>
